--- a/.gitattributes
+++ b/.gitattributes
@@ -1,1 +1,2 @@
 scene_generation/data/base_scene_panda.blend filter=lfs diff=lfs merge=lfs -text
+scene_generation/data/base_scene_panda_w_gripper.blend filter=lfs diff=lfs merge=lfs -text
